--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,3 @@
-# Use this when running the app on a physical device.
-# Replace with your computer's LAN IP (same Wi‑Fi as the phone).
-# Find it: Windows: ipconfig → "IPv4 Address"; Mac: System Preferences → Network.
-EXPO_PUBLIC_API_URL=http://192.168.1.2:8080
+# API base URL. Use only for production builds (e.g. https://api.yourgame.com).
+# Never commit .env with local IPs. Emulator uses localhost automatically.
+EXPO_PUBLIC_API_BASE_URL=
