--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --localhost",
+    "start:clear": "expo start --clear --localhost",
+    "android": "expo start --android --localhost",
+    "android:clear": "expo start --android --clear --localhost",
+    "ios": "expo start --ios --localhost",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
     "expo-audio": "~1.1.1",
     "expo-blur": "~15.0.8",
     "expo-status-bar": "~3.0.9",
